# ebac_djangoframework

./: README.md  db.sqlite3  pyproject.toml
ebac_djangoframework/: manage.py  settings.py  wsgi.py
ebac_djangoframework/ebac_djangoframework/: asgi.py  settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py  0002_rename_product_order_products.py
order/models/: order.py
order/serializers/: __init__.py  order_serialiazer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_name_category_title.py  0003_rename_title_category_name.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
